TagLib 1.8 (In Development)
===========================

 * Support for writing ID3v2.3 tags.
 * Added methods for checking if WMA and MP4 files are DRM-protected.
 * Started using atomic int operations for reference counting.

TagLib 1.7 (Mar 11, 2011)
=========================

1.7:

 * Fixed memory leaks in the FLAC file format parser.
 * Fixed bitrate calculation for WAV files.

1.7 RC1:

 * Support for reading/writing tags from Monkey's Audio files. (BUG:210404)
 * Support for reading/writing embedded pictures from WMA files.
 * Support for reading/writing embedded pictures from FLAC files (BUG:218696).
 * Implemented APE::Tag::isEmpty() to check for all APE tags, not just the
   basic ones.
 * Added reading of WAV audio length. (BUG:116033)
 * Exposed FLAC MD5 signature of the uncompressed audio stream via
   FLAC::Properties::signature(). (BUG:160172)
 * Added function ByteVector::toHex() for hex-encoding of byte vectors.
 * WavPack reader now tries to get the audio length by finding the final
   block, if the header doesn't have the information. (BUG:258016)
 * Fixed a memory leak in the ID3v2.2 PIC frame parser. (BUG:257007)
 * Fixed writing of RIFF files with even chunk sizes. (BUG:243954)
 * Fixed compilation on MSVC 2010.
 * Removed support for building using autoconf/automake.
 * API docs can be now built using "make docs".

TagLib 1.6.3 (Apr 17, 2010)
===========================

 * Fixed definitions of the TAGLIB_WITH_MP4 and TAGLIB_WITH_ASF macros.
 * Fixed upgrading of ID3v2.3 genre frame with ID3v1 code 0 (Blues).
 * New method `int String::toInt(bool *ok)` which can return whether the
   conversion to a number was successfull.
 * Fixed parsing of incorrectly written lengths in ID3v2 (affects mainly
   compressed frames). (BUG:231075)

TagLib 1.6.2 (Apr 9, 2010)
==========================

 * Read Vorbis Comments from the first FLAC metadata block, if there are
   multipe ones. (BUG:211089)
 * Fixed a memory leak in FileRef's OGA format detection.